# dida-agent

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/agents/: base_agent.py  chat_agent.py  cleaning_agent.py  feature_agent.py  ml_prep_agent.py  reporting_agent.py  schema_analyzer.py
backend/models/: schemas.py
backend/routers/: analyze.py  auth.py  chat.py  clean.py  export.py  feature_engineering.py  ml_prep.py  report.py  upload.py
backend/services/: openai_manager.py
backend/utils/: file_handler.py  report_generator.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AnalysisView.jsx  ChatInterface.jsx  DataPreview.jsx  ExportView.jsx  FileUpload.jsx  MLPrepComponents.jsx  SettingsPanel.jsx
frontend/src/store/: useAuthStore.js  useDataStore.js
