[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==23.2.1",
    "fastapi==0.109.0",
    "kaleido==0.2.1",
    "matplotlib==3.8.2",
    "numpy==1.26.3",
    "openai>=1.12.0",
    "openpyxl==3.1.2",
    "pandas==2.1.4",
    "plotly==5.18.0",
    "polars==0.20.3",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "reportlab==4.0.9",
    "scikit-learn==1.4.0",
    "seaborn==0.13.2",
    "sqlalchemy==2.0.25",
    "uvicorn[standard]==0.27.0",
    "weasyprint==60.2",
    "xlrd==2.0.1",
]
